FISH-5870 Add profile for Metrics
Signed-off-by: Andrew Pielage <pandrex247@hotmail.com>